SERVER-48506 Throw MaxTimeMSExpired instead of FailedToSatisfyReadPreference when RSM deadline is less than max